# NovosibirskCloudSegmentation

./: .gitignore  CMakeLists.txt
NovoCloudSegmentation/: main.cpp
NovoCloudSegmentation.xcodeproj/: project.pbxproj
NovoCloudSegmentation.xcodeproj/xcshareddata/xcschemes/: NovoCloudSegmentation.xcscheme
NovoCloudSegmentation.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
NovoCloudSegmentation/3d_visualization/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  MatrixChnageHandler.cpp  MatrixChnageHandler.hpp  PangolinDSOViewer.cpp  PangolinDSOViewer.h  SimpleMatrix.cpp  SimpleMatrix.hpp  TrajectoryDrawer.cpp  TrajectoryDrawer.hpp
NovoCloudSegmentation/cloud/: cloud.cpp  cloud.hpp  cloud_analyzer.cpp  cloud_analyzer.hpp  cloud_to_kf.cpp  cloud_to_kf.hpp  plane.cpp  plane.hpp
NovoCloudSegmentation/utils/: confusion_matrix.cpp  confusion_matrix.hpp
notebooks/: hackathon_baseline.ipynb
train_pipeline/: default_config.py  model.py  multi_config.py  prepare_for_upload.py  test.py  test_config.py  train.py  utils.py
train_pipeline/dataset/: dataset.py
